# deltafs-vpic-preload

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  clair_voir.cc  clair_voir.h  common.cc  common.h  deltafs-preload-test.c  deltafs-preload.cc  fake-file.h  hstg.cc  hstg.h  io_plfsdir.h  maybe-mutex.h  mock_backend.cc  mock_backend.h  mon.cc  mon.h  msgfmt.cc  msgfmt.h  nn_shuffler.cc  nn_shuffler.h  nn_shuffler_internal.cc  nn_shuffler_internal.h  oob_buffer.cc  oob_buffer.h  preload-test.cc  preload-test.sh  preload.cc  preload.h  preload_internal.cc  preload_internal.h  preload_mon.cc  preload_mon.h  preload_perfstats.cc  preload_perfstats.h  preload_range.cc  preload_range.h  preload_runner.cc  preload_shuffle.cc  preload_shuffle.h  pthreadtap.cc  (+31 more)
src/carp/: binhistconsumer.h  binhistogram.h  carp.cc  carp.h  carp_containers.cc  carp_containers.h  carp_perflog.cc  carp_preload.cc  carp_preload.h  carp_utils.cc  carp_utils.h  comboconsumer.h  data_buffer.cc  data_buffer.h  floatvecconsumer.h  mock_backend.cc  mock_backend.h  msgfmt.cc  msgfmt.h  oob_buffer.cc  oob_buffer.h  ordered_bins.cc  ordered_bins.h  pivot_buffer.cc  pivot_buffer.h  pivot_union.cc  pivot_union.h  pivots.cc  pivots.h  policy.cc  policy.h  preload_range.h  range.h  range_common.cc  range_common.h  range_constants.h  range_utils.cc  range_utils.h  regular_trigger.cc  regular_trigger.h  (+9 more)
src/cmake/: FindBLKID.cmake
src/papi-try/: .gitrepo  CMakeLists.txt  LICENSE.txt  README.md  papi-try.cc
src/papi-try/cmake/: FindNUMA.cmake  FindPAPI.cmake
src/perfstats/: manifest_analytics.cc  manifest_analytics.h  perfstats.cc  perfstats.h  stat.cc  stat.h  stat_blkid.cc  stat_blkid.h
src/range_backend/: mock_backend.cc  mock_backend.h  range_backend.cc  range_backend.h
src/rtp/: data_buffer.cc  data_buffer.h  rtp.cc  rtp.h  rtp_internal.h  rtp_state_mgr.cc  rtp_util.cc
src/shuffler/: .gitrepo  CMakeLists.txt  README.md  acnt_wrap.c  acnt_wrap.h  mlog.c  mlog.h  nexus-runner.cc  shuf_mlog.cc  shuf_mlog.h  shuffler.cc  shuffler.h  shuffler_internal.h
tests/: CMakeLists.txt  deltafs-test.sh  noplfs-test.c  noplfs-test.sh  parse_pvtstate.py  pivot_calc_10_data.cc  pivot_calc_11_data.cc  pivot_calc_4_data.cc  pivot_calc_5_data.cc  pivot_calc_6_data.cc  pivot_calc_7_data.cc  pivot_calc_8_data.cc  pivot_calc_9_data.cc  placement-test.c  placement-test.sh  preload-test.c  preload-test.cc  preload-test.sh  pvtstate.txt  range_utils-test.cc  resample_bins_irregular_1_data.cc  rtp-test.cc  shuffle-test.c  shuffle-test.sh  stat_trigger-test.cc  vpic-test.cc  vpic-test.sh
tests/Testing/Temporary/: CTestCostData.txt
tools/: CMakeLists.txt  README.md  calc_pivots.cc  preload_plfsdir_reader.cc  preload_plfsdir_reader.h  preload_reader.cc  preload_runner.cc  query_main.cc  range_runner.cc  reader.cc  tools_common.h  trace_reader.h  vpic-deltafs-reader.cc  workload_generator.cc  workload_generator.h
tools/carp_benchmarks/: CMakeLists.txt
tools/carp_benchmarks/pivot_bench/: CMakeLists.txt  logger.h  parallel_processor.cc  parallel_processor.h  pivot_aggr.cc  pivot_aggr.h  pivot_bench.cc  pivot_bench.h  pivot_bench_runner.cc  pivot_common.h  rank.h  trace_reader.cc  trace_reader.h
tools/carp_benchmarks/rtp_bench/: CMakeLists.txt  rtp_bench.cc  rtp_bench.h
tools/query_client/: query_client.cc  query_client.h  sortable_buffer.cc  sortable_buffer.h
tools/rtp_bench/: CMakeLists.txt  preload_funcs.cc  rtp_bench.cc  rtp_bench.h  rtp_bench_runner.cc
